<resources>
    <string name="app_name">Take My Package</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="to_join_us_fill_details">To join us fill details:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="enter_email">Enter Email</string>
    <string name="log_in">Log In</string>
    <string name="password">password</string>
    <string name="to_log_in_with_your_email_press">To log in with your email press</string>
    <string name="here">here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="who_can_take_it">Who can take it?</string>
    <string name="textview">TextView</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="take_my_package">Take My Package</string>
    <string name="add_image">Add Image</string>
</resources>
