<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/already_have_an_account_log_in"
            android:textColor="#3F51B5"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/editTextPhoneLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:drawableStart="@drawable/ic_phone"
            android:hint="@string/enter_phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="10"
            android:drawableLeft="@drawable/ic_phone" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="OR"
            android:textColor="#3F51B5"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_email" />

        <EditText
            android:id="@+id/editTextPIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_lock"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/log_in"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="354dp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Haven't you joined us yet?" />

            <TextView
                android:id="@+id/textViewSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="Sign Up"
                android:textColor="@android:color/holo_red_dark" />
        </LinearLayout>

    </LinearLayout>

=======
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

>>>>>>> Stashed changes
</androidx.constraintlayout.widget.ConstraintLayout>