<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Login.SignUp.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textFillDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/to_join_us_fill_details"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/urlImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"

                android:background="@android:drawable/ic_menu_add"
                app:srcCompat="@drawable/custom_button" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/enter_phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="12dp" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"

            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/enter_address"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:maxLength="30"
            android:padding="12dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"

            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"

            android:padding="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/first_name"

                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:padding="12dp" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_input"

                android:ems="10"
                android:hint="@string/last_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:padding="12dp" />


        </LinearLayout>

        <EditText
            android:id="@+id/editTextPIN"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"

            android:ems="10"
            android:hint="Choose a password"
            android:inputType="textPassword"
            android:padding="12dp" />

      <!--  <TextView
            android:id="@+id/textViewSelectImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:text="Select Image>>"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />-->
        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/custom_button"
            android:drawablePadding="12dp"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:text="@string/sign_up"

            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="266dp" />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>